menu resize wrapping fix

--- a/src/demo/layout.styl
+++ b/src/demo/layout.styl
@@ -24,8 +24,11 @@ img
 .page-content
     margin-top 2rem
     margin-bottom 2rem
+.menu-parent
+  width 100%
 .menu
   margin-top 2rem
+  width 100%
   &__container
     display grid
     grid-gap 10px
